Lagt til tester for AmtArrangorClient, AmtPersonServiceClient og IsOppfolgingstilfelleClient